# echo-aec

./: .gitignore  LICENSE  README.md  build.bat  run_aec3_test.bat  run_correct_test.bat  run_crosscorr.bat  run_decode.bat  run_diagnose.bat  run_energy_test.bat  run_minimal_test.bat  run_official.bat  run_pipewire_test.bat  run_real_test.bat  run_recording_test.bat  run_synth_test.bat  run_test.bat  tauri.bat  依赖.txt
audio-core/: Cargo.toml
audio-core/examples/: decode_files.rs  test_aec.rs  test_aec3_config.rs  test_correct_aec.rs  test_cross_corr.rs  test_diagnose_aec.rs  test_energy_level.rs  test_minimal_aec.rs  test_pipewire_config.rs  test_real_aec.rs  test_real_recording.rs  test_synth_aec.rs
audio-core/src/: api.rs  device.rs  main.rs
audio-core/src/audio/: aec.rs  capture.rs  engine.rs  mod.rs  render.rs  streams.rs
licenses/: LICENSE-flexaudio  SOURCES.md  THIRD_PARTY_NOTICES-flexaudio.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs
src-tauri/src/audio/: aec.rs
web-ui/: index.html  package-lock.json  package.json  vite.config.js
web-ui/src/: App.jsx
